<resources>
    <string name="app_name">WishADish</string>
    <string name="offene_einkaufslisten">Offene EInkaufslisten</string>
    <string name="gerichte_heute">Gerichte Heute</string>
    <string name="landing">Startseite</string>
    <string name="startseite">Startseite</string>
    <string name="kalender">Kalender</string>
    <string name="einkaufslisten">Einkaufslisten</string>
    <string name="gerichte">Gerichte</string>
    <string name="zutaten">Zutaten</string>
    <string name="gruppen">Gruppen</string>
    <string name="morgens">Morgens</string>
    <string name="mittags">Mittags</string>
    <string name="abends">Abends</string>
    <string name="best_tigen">Bestätigen</string>
    <string name="zeit">Zeit</string>
    <string name="gruppe">Gruppe</string>
    <string name="Morgens">Morgens</string>
    <string name="Mittags">Mittags</string>
    <string name="Abends">Abends</string>
    <string name="titel">Titel:</string>
    <string name="username">Username</string>
    <string name="passwort">Passwort</string>
    <string name="login">Login</string>
    <string name="zutatenliste">Zutatenliste :</string>
    <string name="mitglieder">Mitglieder</string>
    <string name="benutzer">Benutzer</string>
    <string name="profil">Profil</string>
    <string name="name">Name</string>
    <string name="geburtsdatum">Geburtsdatum</string>
    <string name="email">Email</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
</resources>