<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textview_day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Tag XX.XX.XX"
        android:textSize="30sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gruppe" />

    <Spinner
        android:id="@+id/spinner_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gerichte" />

    <Spinner
        android:id="@+id/spinner_dish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/zeit" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioButton
            android:id="@+id/radio_morning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:duplicateParentState="false"
            android:text="Morgens" />

        <RadioButton
            android:id="@+id/radio_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Mittags" />

        <RadioButton
            android:id="@+id/radio_evening"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Abends" />
    </RadioGroup>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/best_tigen" />
</LinearLayout>